@@ -9,7 +9,8 @@ Estimate pairwise Linkage Disequilibrium (LD) between markers measured as \eqn{r
 }
 \usage{
 pairwiseLD(gpData, chr = NULL, type = c("data.frame", "matrix"),
-           use.plink=FALSE, ld.threshold=0, rm.unmapped = TRUE)
+           use.plink=FALSE, ld.threshold=0,
+           ld.window=99999, rm.unmapped = TRUE)
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
@@ -27,6 +28,9 @@ object of class \code{gpData} with elements \code{geno} and \code{map}
 }
   \item{ld.threshold}{
 \code{numeric}. Threshold for the LD to thin the output. Only pairwise LD>\code{ld.threshold} is reported when PLINK is used. This argument can only be used for \code{type="data.frame"}.
+}
+  \item{ld.window}{
+\code{numeric}. Window size for pairwise differences which will be reported by PLINK (only for \code{use.plink=TRUE}) to thin the output dimensions. Only SNP pairs with a distance < \code{ld.window} are reported (default = 99999).
 }
   \item{rm.unmapped}{
 \code{logical}. Remove markers with unknown postion in \code{map} before using PLINK?
